src/nohup.out
WARNING (theano.sandbox.cuda): The cuda backend is deprecated and will be removed in the next release (v0.10).  Please switch to the gpuarray backend. You can get more information about how to switch at this URL:
 https://github.com/Theano/Theano/wiki/Converting-to-the-new-gpu-back-end%28gpuarray%29

Using gpu device 0: GeForce GTX TITAN X (CNMeM is enabled with initial size: 45.0% of memory, cuDNN 5005)
Traceback (most recent call last):
  File "train.py", line 5, in <module>
    from model import *
  File "/home/anthony/Projects/acronym/src/model.py", line 293
    else
       ^
SyntaxError: invalid syntax
